--- a/style.css
+++ b/style.css
@@ -38,8 +38,24 @@
 }
 
 .section2 p {
+	margin-top: 100px;
 	display: inline-block;
-	color: white;
-	padding: 0.5em;
+	color: yellow;
+	padding: 1em 0.5em;
 	background: black;
+	position: relative;
+	top: 0;
+	transition: .35s;
+}
+
+.section2 p:hover {
+	position: relative;
+	top: -50px;
+}
+
+.section3 {
+	width: 100vw;
+	height: 50vh;
+	background: black;
+	color: white;
 }
